<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventarios</string>
    <string name="theme">Tema</string>
    <string name="title_theme">Tema 5 Inventarios</string>
    <string name="begin">Inicio</string>
    <string name="menu_lesson">Menu de lecciones</string>
    <string name="menu_exercise">Menu de ejercicios</string>
    <string name="menu_evaluation">Menu de evaluación</string>
    <string name="lessons">Lecciones</string>
    <string name="exercises">Ejercicios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="evaluation">Evaluación</string>

    <string name="name_account1">Bancos</string>
    <string name="name_account2">Clientes</string>
    <string name="name_account3">Almacén</string>
    <string name="name_account4">Edificios</string>
    <string name="name_account5">Maquinaria y equipo de trabajo</string>
    <string name="name_account6">Depreciación de maquinaria y equipo de trabajo</string>
    <string name="name_account7">Proveedores</string>
    <string name="name_account8">Acreedores diversos</string>
    <string name="name_account9">Capital social</string>
    <string name="name_account10">Resultado ejercicio anterior</string>
    <string name="name_account11">Costo de ventas</string>
    <string name="name_account12">Ventas</string>
    <string name="name_account13">Equipo de oficina</string>
    <string name="name_account14">Depreciación de equipo oficina</string>
    <string name="name_account15">Sumas Iguales</string>
    <string name="name_account16">Utilidad bruta</string>
    <string name="name_account_value1">50,000.00</string>
    <string name="name_account_value2">125,000.00</string>
    <string name="name_account_value3">65,000.00</string>
    <string name="name_account_value4">100,000.00</string>
    <string name="name_account_value5">45,000.00</string>
    <string name="name_account_value6">11,250.00</string>
    <string name="name_account_value7">100,000.00</string>
    <string name="name_account_value8">63,750.00</string>
    <string name="name_account_value9">200,000.00</string>
    <string name="name_account_value10">10,000.00</string>


    <string name="name_account_titles1">Nombre de la cuenta</string>
    <string name="name_account_titles2">Importe</string>
    <string name="name_account_titles3">Cuenta</string>
    <string name="name_account_titles4">Naturaleza</string>
    <string name="name_account_titles5">Representa</string>
    <string name="name_account_type1">Activo circulante</string>
    <string name="name_account_type2">Activo no circulante</string>
    <string name="name_account_type3">Pasivo a corto plazo</string>
    <string name="name_account_type33">Suma pasivo a corto plazo</string>
    <string name="name_account_type4">Capital contable</string>
    <string name="name_account_type44">Suma capital contable</string>
    <string name="name_account_type55">Suma pasivo mas capital contable</string>
    <string name="name_nature_type1">Deudor</string>
    <string name="name_nature_type2">Acreedor</string>
    <string name="exercise_represents0">Registra los aumentos y disminuciones que tiene el efectivo de la entidad.</string>
    <string name="exercise_represents1">Registra los aumentos y disminuciones derivados de las ventas a crédito.</string>
    <string name="exercise_represents2">Representa el valor de la mercancía que la empresa tiene para su venta.</string>
    <string name="exercise_represents3">Registra los aumentos y disminuciones relativos a edificios adquiridos, construidos, o vendidos propiedad de la entidad.</string>
    <string name="exercise_represents4">Registra los aumentos y disminuciones relativos a mobiliario y equipo de oficina adquiridos o vendidos propiedad de la entidad.</string>
    <string name="exercise_represents5">Registra los aumentos y disminuciones relativos a la depreciación de la maquinaria y equipo de trabajo propiedad de la entidad.</string>
    <string name="exercise_represents6">Registra los aumentos y disminuciones derivados de las compras a crédito.</string>
    <string name="exercise_represents7">Registra los aumentos y disminuciones derivados de las compras a crédito distintos de mercancías.</string>
    <string name="exercise_represents8">Registra los aumentos y disminuciones derivados de las aportaciones a la sociedad.</string>
    <string name="exercise_represents9">Registra los aumentos y disminuciones de las utilidades o pérdidas acumuladas de la entidad.</string>
    <string name="exercise_represents10">Registra los aumentos y disminuciones relativos a mobiliario y equipo de oficina adquiridos o vendidos propiedad de la entidad.</string>
    <string name="exercise_represents11">Registra los aumentos y disminuciones relativos a la depreciación de la equipo de oficina propiedad de la entidad.</string>
    <string name="title_activity_evaluation_inst">activity_evaluation_inst</string>
    <string name="title_activity_evaluation1_activity">Evaluation1_activity</string>
    <!--Parte 2-->
    <string name="exercise_operation1">Compramos mercancías por $ 50,000; 30% de contado y 70 % a crédito.</string>
    <string name="exercise_operation2">Devolvimos mercancías por el 25% de la venta a crédito.</string>
    <string name="exercise_operation3">Derivado de la devolución nos realizaron una rebaja sobre la compra a crédito por $2,000.00.</string>
    <string name="exercise_operation4">Vendimos mercancías por $ 50,000; 100% contador. El costo es de $ 25,000.00</string>
    <string name="exercise_operation5">Un cliente nos devuelve mercancías por $ 3,500 que acreditamos en su saldo. El costo es de $ 1,750.00</string>

    <string name="exercise_table_tittle1">Fecha</string>
    <string name="exercise_table_tittle2">Concepto</string>
    <string name="exercise_table_tittle3">Debe</string>
    <string name="exercise_table_tittle4">Haber</string>
    <string name="exercise_table_tittle5">Sumas iguales</string>

    <string name="exercise_operation_tittle1">Operación 1.</string>
    <string name="exercise_operation_tittle2">Operación 2.</string>
    <string name="exercise_operation_tittle3">Operación 3.</string>
    <string name="exercise_operation_tittle4">Operación 4.</string>
    <string name="exercise_operation_tittle5">Operación 5.</string>

    <string name="Step_1">Paso 1: Clasificación de las cuentas.</string>
    <string name="Step_2">Paso 2: Registro de las operaciones en diario.</string>
    <string name="Step_3">Paso 3: Pasar el registro de las operaciones a esquemas de mayor.</string>
    <string name="Step_4">Paso 4. Elaborar balanza de comprobación.</string>
    <string name="Step_5">Paso 5. Elaborar Estado de Resultados.</string>
    <string name="Step_6">Paso 6. Elaborar Estado de Posición financiera.</string>
    <string name="Step_tittle">Comercializadora UFM, S.A. de C.V.</string>


    <!-- Evaluacion-->
    <string name="evaluation_operation1">Vendemos mercancías a crédito por $ 150,000.00. </string>
    <string name="evaluation_operation2">Cobramos las mercancías a crédito en un 80%.</string>
    <string name="evaluation_operation3">Compramos mercancías a crédito por $ 60,000.00 lo cual nos generó gastos por el 25% del costo de las mercancías. </string>
    <string name="evaluation_operation4">Vendimos mercancías por $ 270,000; 100% contado. </string>
    <string name="evaluation_operation5">Un cliente nos devuelve mercancías por $ 10,500.00 de la primera venta, que acreditamos en su saldo. </string>
    <string name="evaluation_operation6">Pagamos a nuestos proveedores el 50% del adeudo a la fecha</string>

    <string name="evaluation_operation_note1">Nota: No se utiliza la partida de IVA por no ser la cuenta a trabajar en este tema.</string>
    <string name="evaluation_operation_note2">Nota: Todas las mercancías vendidas tienen un costo del 35%</string>


    <string name="evaluation_operation_tittle1">Operación 1.</string>
    <string name="evaluation_operation_tittle2">Operación 2.</string>
    <string name="evaluation_operation_tittle3">Operación 3.</string>
    <string name="evaluation_operation_tittle4">Operación 4.</string>
    <string name="evaluation_operation_tittle5">Operación 5.</string>
    <string name="evaluation_operation_tittle6">Operación 6.</string>

    <string name="name_account_value1_evaluation">12,500.00</string>
    <string name="name_account_value2_evaluation">55,000.00</string>
    <string name="name_account_value3_evaluation">125,000.00</string>
    <string name="name_account_value4_evaluation">250,000.00</string>
    <string name="name_account_value5_evaluation">45,000.00</string>
    <string name="name_account_value6_evaluation">22,500.00</string>

    <string name="name_account_value11_evaluation">6,500.00</string>
    <string name="name_account_value12_evaluation">1,300.00</string>

    <string name="name_account_value7_evaluation">58,200.00</string>
    <string name="name_account_value8_evaluation">65,000.00</string>
    <string name="name_account_value9_evaluation">150,000.00</string>
    <string name="name_account_value10_evaluation">197,000.00</string>
    <string name="title_activity_paso_cuatro_continuacion_dos">PasoCuatroContinuacionDos</string>

</resources>
